tests/fixtures/fail/raw_pointer_deref_safe.sc
let main(): i32 = {
  let value = 42
  let pointer = Ptr(borrow(value))
  *pointer
}
